--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0.138"
 serde_yaml = "0.9.34"
 walkdir = "2.5.0"
 reqwest = { version = "0.12.15", features = ["json"] }
+colored = "3.0.0"
