--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "autoschematic-connector-patio-lights"
 version = "0.6.0"
 edition = "2024"
+license = "MIT"
+description = "Mess with the lighst on https://autoschematic.sh"
 
 [dependencies]
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
